--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Data Clerk</h3>
-	   					<p>Feb 2020 - Nov 2020</p>
+	   					<p>August 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -380,7 +380,7 @@
 
 					   <div class="timeline-header">
 						<h3>ALX Software Engineering Program</h3>
-						<p>Feb 2023</p>
+						<p>Feb 2023 - Date</p>
 					</div>
 
 					<div class="timeline-content">
@@ -408,7 +408,7 @@
 	   				<div class="timeline-content">
 	   					<h4>Web Development</h4>
 	   					<p>I studied in depth skills such as HTML, CSS and JavaScript and become a certified web Developer.
-						 <a class="btnp" href="file:///C:\Users\MWANGI\Downloads\Udemy Web_Dev Cert.pdf">Download PDF</a>
+						 <a class="btnp" href="certificates/Udemy Web_Dev Cert.pdf">Download PDF</a>
 						 
 						<h5>E-commerce Project</h5>
 						<a href="https://github.com/Giddymaster/E-commerce-Website" target="_blank" title="Github" class="btnp">Project</a>
@@ -445,7 +445,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>High School</h3>
-	   					<p>Feb 2015 - Nov 2018</p>
+	   					<p>Feb 2012 - Nov 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
