--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
    	<div class="row button-section">	
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="btnp">Hire Me</a><!-- button stroke smoothscroll -->
-   			<a href="certificates\GIDEON_MWANGI_CV.docx" target="_blank" title="Download CV" class="btnp">Download CV</a>
+   			<a href="certificates\GM_CV.docx" target="_blank" title="Download CV" class="btnp">Download CV</a>
    		</div>   		
    	</div>
 
@@ -370,10 +370,10 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Maseno University</h4>
-	   					<p>At <a href="https://www.maseno.ac.ke/">Maseno University</a>, I pursed a Bachelor's of Scince Degree in Mathematics
-							 with IT(Applied Mathematics Option). This is where I first learned about programming,in C,Java,HTML,Javascript,C++, 
-							 Pyton, LaTeX and R statistical software. Study of Real and Complex analysis,ODE and PDE,Algebra and Algorithm concepts helped me gain 
-							 problem solving skills.<br>
+	   					<p>At <a href="https://www.maseno.ac.ke/">Maseno University</a>, I pursued a Bachelor of Science Degree in Mathematics
+							 with IT(Pure Mathematics Option). This is where I first learned about programming in C, Java, HTML, Javascript, 
+							 Python, LaTeX and R statistical software. Study of Real and Complex analysis, ODE and PDE, Algebra and Algorithm concepts helped me gain 
+							 problem-solving skills.<br>
 	   
 	   					</p>
 	   				</div>
@@ -385,8 +385,8 @@
 
 					<div class="timeline-content">
 						<h4>ALX</h4>
-						<p>At <a href="https://www.ALX.ke/">ALX</a>, I am currently enrolled and I have completed sprint 1 of 4
-							equipped with C programming, Git and Github version Control, Linux CLI. I have done 2 projects - printf and Simple shell.More details are in my github Repos..
+						<p>At <a href="https://www.ALX.ke/">ALX</a>, I am currently enrolled, and I have completed sprint 1 of 4
+							equipped with C programming, Git and Github version Control, and Linux CLI. I have done two projects - Printf and Simple shell.More details are in my github Repos..
 							<a href="https://github.com/Giddymaster/alx-low_level_programming" target="_blank" title="Github" class="btnp">Github</a>
 							<br>
 						</p>
@@ -407,7 +407,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Web Development</h4>
-	   					<p>I studied in depth skills such as HTML, CSS and JavaScript and become a certified web Developer.
+	   					<p>I studied in-depth skills such as HTML, CSS and JavaScript and become a certified web Developer.
 						 <a class="btnp" href="certificates/Udemy Web_Dev Cert.pdf">Download PDF</a>
 						 
 						<h5>E-commerce Project</h5>
@@ -450,8 +450,8 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Ikundu High School</h4>
-	   					<p>I attained an overall score of B-, 57 points. I was awarded Certificate of Merit, for topping Maths contest 
-							held at OLC Mugoiri Girls National School, among other certificates along the 4 years.
+	   					<p>I attained an overall B-, 57 points. I was awarded a Certificate of Merit for topping the Maths contest 
+							held at OLC Mugoiri Girls National School, among other certificates over the four years.
 						<a class="btnp" href="images/KCSE.jpg">View Certificate</a>
 						 <br> 
 						</p>
@@ -479,7 +479,7 @@
 		   <h1>Check Out Some of My Works.</h1>
 
 		   <p class="lead">These include personal projects while tinkering with code, some freelance clients, 
-			open-source projects I have contributed to and work related masterpieces.</p>
+			open-source projects I have contributed to and work-related masterpieces.</p>
 
 	   </div>   		
    </div> <!-- /section-intro--> 
@@ -518,7 +518,7 @@
 						<div class="folio-item-cell">
 							<h3 class="folio-title">BlockChain Technology</h3>
 									<span class="folio-types">
-									Study,Analyze,Manage and Predict Markets <br>
+									Study, Analyze, Manage and Predict Markets <br>
 										Binance & Market Cap.
 								  </span>
 							   </div>
@@ -605,8 +605,8 @@
            <div class="col-2">
         <p style="text-align:center;"> N. Mwangi Gideon</p>
             <h1 style="text-align:center;font-family: Lucida Handwriting;">Message </h1>
-        <p style="text-align:center;">"Resources are always scarce, I only learnt how to maximise what I have. 
-			At the end, only the results matters."<br>
+        <p style="text-align:center;">"Resources are always scarce; I only learnt how to maximise what I have. 
+			In the end, only the results matter."<br>
 			My resolve is to identify opportunities, challenges and
 			 purposefully take an integrated approach to seize, solve and deliver.™</p>
             <br>
@@ -699,7 +699,7 @@
 
 			<p class="desc">Software support and maintenance
 
-				I ensure smooth functioning and relevancy of your software via continuous performance monitoring,
+				I ensure the smooth functioning and relevancy of your software via continuous performance monitoring,
 				 proactive optimization and fast issue resolution, delivery of new features and integrations.
 
 			</p>
