--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
       <p>For more information email me at Gideomwangi83@gmail.com or <br>Call/SMS me on +245714212010.</p>
       <h3>Why am I seeing this?</h3>
       <p>This is a confidential document/file/page you cannot access or Check the URL and your Internet Connection and Try Again!</p><br>
-      <a href="index.html"><h4>Go Back To Home Page</h4></a><br>
+      <a href="index.html">Go Back To Home Page</a><br>
       <h1>Thank you. <br>Regards,<br>Gideon Mwangi</h1>
     </div>
   </body>
