--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
    	<div class="row button-section">	
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="btnp">Hire Me</a><!-- button stroke smoothscroll -->
-   			<a href="certificates\GM_CV.docx" target="_blank" title="Download CV" class="btnp">Download CV</a>
+   			<a href="certificates\GM_CV (1) (1).pdf" target="_blank" title="Download CV" class="btnp">Download CV</a>
    		</div>   		
    	</div>
 
