--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
 	   				<div class="timeline-content">
 	   					<h4>Web Development</h4>
 	   					<p>I studied in-depth skills such as HTML, CSS and JavaScript and become a certified web Developer.
-						 <a class="btnp" href="certificates/Udemy Web_Dev Cert.pdf">Download PDF</a>
+						 <a class="btnp" href="certificates/Udemy Web_Dev Cert.pdf">Download Cert</a>
 						 
 						<h5>E-commerce Project</h5>
-						<a href="https://github.com/Giddymaster/E-commerce-Website" target="_blank" title="Github" class="btnp">Project</a>
+						<a href="https://Giddymaster.github.io/E-commerce-Website/" target="_blank" title="Github" class="btnp">View Project</a>
 						 <br>
 					
 						</p>
